#1206 Various wcag contrast fixes.

--- a/devilry/devilry_theme3/staticsources/devilry_theme3/styles/cradmin_theme_devilry_mainpages/views/devilry_frontpage/frontpage.less
+++ b/devilry/devilry_theme3/staticsources/devilry_theme3/styles/cradmin_theme_devilry_mainpages/views/devilry_frontpage/frontpage.less
@@ -41,18 +41,55 @@
   a.cradmin-legacy-listbuilder-itemframe-link.devilry-frontpage-listbuilder-roleselect-itemframe {
     &.devilry-frontpage-listbuilder-roleselect-itemframe-student {
       .devilry-frontpage-rolelink(
-              @devilry-brand-color-student-dark,
-              @devilry-brand-color-student);
+          @devilry-brand-color-student,
+          @devilry-brand-color-student-dark);
     }
     &.devilry-frontpage-listbuilder-roleselect-itemframe-examiner {
       .devilry-frontpage-rolelink(
-              @devilry-brand-color-examiner-dark,
-              @devilry-brand-color-examiner);
+        @devilry-brand-color-examiner,
+        @devilry-brand-color-examiner-dark);
     }
     &.devilry-frontpage-listbuilder-roleselect-itemframe-anyadmin {
       .devilry-frontpage-rolelink(
-              @devilry-brand-color-admin-dark,
-              @devilry-brand-color-admin);
+        @devilry-brand-color-admin,
+        @devilry-brand-color-admin-dark);
     }
   }
 }
+
+
+// .colortest-student {
+//   padding: 10px;
+//   background-color: @devilry-brand-color-student;
+//   color: #fff;
+// }
+
+// .colortest-examiner {
+//   padding: 10px;
+//   background-color: @devilry-brand-color-examiner;
+//   color: #fff;
+// }
+
+// .colortest-admin {
+//   padding: 10px;
+//   background-color: @devilry-brand-color-admin;
+//   color: #fff;
+// }
+
+// .colortest-alert-success {
+//   padding: 10px;
+//   background-color: @alert-success-bg;
+//   color: @alert-success-text;
+// }
+
+// .colortest-alert-info {
+//   padding: 10px;
+//   background-color: @alert-info-bg;
+//   color: @alert-info-text;
+// }
+
+// .colortest-alert-warning {
+//   padding: 10px;
+//   background-color: @alert-warning-bg;
+//   color: @alert-warning-text;
+// }
